# avr-serial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: emulation.yml
app/: CMakeLists.txt
app/cmake/: avr_toolchain.cmake
app/include/: buffer.h  pgmutil.hpp  usart.h  usart.hpp  usart_base.hpp
app/src/: CMakeLists.txt  isrs.cpp  main.cpp
app/src/buffer/: CMakeLists.txt  buffer.cpp
app/src/usart/: CMakeLists.txt  abi.cpp  communicate.cpp  configure.cpp  event.cpp  initialize.cpp  print.cpp  readwrite.cpp  usart.cpp  usart0.cpp  usart1.cpp  usart2.cpp  usart3.cpp
include/uart/: uart.hpp
include/uart/interface/: base.hpp  buffer.hpp  registermap.hpp
include/usart/: buffer.hpp  impl.hpp  usart.hpp
src/: CMakeLists.txt  abi.cpp  base.cpp  event.cpp  impl.cpp  initialize.cpp  interrupt.cpp  print.cpp  readwrite.cpp  usart0.cpp  usart1.cpp  usart2.cpp  usart3.cpp
tests/: CMakeLists.txt  capture.py  echoback.cmake  echoback.py  isrs.cpp  print.cmake  test_echoback.cpp  test_print.cpp
